[gd_scene load_steps=35 format=4 uid="uid://bn86r56nrk4kw"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_irr2j"]
[ext_resource type="PackedScene" uid="uid://dbeoqwg7vnkit" path="res://scenes/player/player.tscn" id="2_tuiag"]
[ext_resource type="Texture2D" uid="uid://cxj12vinh8rv2" path="res://media/graphics/tilemaps/ground2.png" id="2_xvgsk"]
[ext_resource type="Script" path="res://scenes/player/stats/stats.gd" id="4_k4v00"]
[ext_resource type="PackedScene" uid="uid://bbkmau5kmkd6c" path="res://scenes/ui/menus/in_game_menu.tscn" id="4_vvl4y"]
[ext_resource type="PackedScene" uid="uid://c0o7obqprehu6" path="res://scenes/ui/hud/heads_up_display.tscn" id="5_10l3x"]
[ext_resource type="Resource" uid="uid://gdsqvmqkgod2" path="res://scenes/player/equipment/arms/golemstone_arm.tres" id="5_rkq8n"]
[ext_resource type="Resource" uid="uid://vh2vi6xh8crj" path="res://scenes/player/equipment/arms/chillfrost_arm.tres" id="6_jyt0l"]
[ext_resource type="Script" path="res://scenes/player/equipment/equipment.gd" id="6_uoj1s"]
[ext_resource type="Script" path="res://scenes/player/inventory/inventory.gd" id="7_1it80"]
[ext_resource type="Resource" uid="uid://c5bd1fu3dijf6" path="res://scenes/player/equipment/arms/firelob_arm.tres" id="7_5g3t7"]
[ext_resource type="Script" path="res://scenes/items/item.gd" id="9_mn2ga"]
[ext_resource type="PackedScene" uid="uid://c1oucex0frm8" path="res://scenes/ui/hud/inventory_ui.tscn" id="11_7q2vv"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_nhs8q"]
polygon = PackedVector2Array(-2.99416, -2.99416, -3.0052, -4, 4, -4, 4, 4, -4, 4, -4, -3.0052)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_71ldr"]
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3c2bl"]
polygon = PackedVector2Array(-2.99416, 2.99416, -4, 3.0052, -4, -4, 4, -4, 4, 4, -3.0052, 4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_bjvou"]
polygon = PackedVector2Array(-2.99416, -2.99416, -3.0052, -4, 4, -4, 4, 4, -4, 4, -4, -3.0052)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_inda7"]
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_kcra4"]
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_kr6sk"]
polygon = PackedVector2Array(-2.99416, 2.99416, -4, 3.0052, -4, -4, 4, -4, 4, 4, -3.0052, 4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_t8t68"]
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_vmffg"]
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_7sv7w"]
polygon = PackedVector2Array(2.99416, -2.99416, 4, -3.0052, 4, 4, -4, 4, -4, -4, 3.0052, -4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_afy0l"]
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_tx4ry"]
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_8hqtp"]
polygon = PackedVector2Array(2.99416, 2.99416, 3.0052, 4, -4, 4, -4, -4, 4, -4, 4, 3.0052)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_6vunb"]
polygon = PackedVector2Array(2.99416, -2.99416, 4, -3.0052, 4, 4, -4, 4, -4, -4, 3.0052, -4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ptstw"]
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_q03i6"]
polygon = PackedVector2Array(2.99416, 2.99416, 3.0052, 4, -4, 4, -4, -4, 4, -4, 4, 3.0052)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dalgs"]
resource_name = "ground"
texture = ExtResource("2_xvgsk")
texture_region_size = Vector2i(8, 8)
2:1/0 = 0
2:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_bjvou")
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 4, -4, -2.99219, -2.99219, -2.99219, -2.99219, -4, 4, -4, 4, 4)
3:1/0 = 0
3:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_t8t68")
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
4:1/0 = 0
4:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_7sv7w")
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 2.99219, -4, 2.99219, -2.99219, 4, -2.99219, 4, 4, -4, 4)
1:2/0 = 0
1:2/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_nhs8q")
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 4, -4, -2.99219, -2.99219, -2.99219, -2.99219, -4, 4, -4, 4, 4)
2:2/0 = 0
2:2/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_inda7")
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
4:2/0 = 0
4:2/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_afy0l")
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
5:2/0 = 0
5:2/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_6vunb")
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 2.99219, -4, 2.99219, -2.99219, 4, -2.99219, 4, 4, -4, 4)
1:3/0 = 0
1:3/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_71ldr")
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
5:3/0 = 0
5:3/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_ptstw")
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
1:4/0 = 0
1:4/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_3c2bl")
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 4, -2.99219, 4, -2.99219, 2.99219, -4, 2.99219, -4, -4, 4, -4)
2:4/0 = 0
2:4/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_kcra4")
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
4:4/0 = 0
4:4/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_tx4ry")
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
5:4/0 = 0
5:4/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_q03i6")
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 2.99219, 2.99219, 2.99219, 2.99219, 4, -4, 4, -4, -4)
2:5/0 = 0
2:5/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_kr6sk")
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 4, -2.99219, 4, -2.99219, 2.99219, -4, 2.99219, -4, -4, 4, -4)
3:5/0 = 0
3:5/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_vmffg")
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, -4, 4, -4, -4)
4:5/0 = 0
4:5/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_8hqtp")
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 2.99219, 2.99219, 2.99219, 2.99219, 4, -4, 4, -4, -4)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -2.99219, -3, -2.99219, -2.99219, -4, 2.99219, -4, 2.99219, -2.99219, 4, -2.99219, 4, 4, -4, 4)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 2.99219, -3, 2.99219, -2.99219, 4, 2.99219, 4, 2.99219, 2.99219, 4, 2.99219, 4, -4, -4, -4)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 2.99219, -4, 2.99219, -2.99219, 4, -2.99219, 4, 4, -4, 4)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 2.99219, 2.99219, 2.99219, 2.99219, 4, -4, 4, -4, -4)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 4, -2.99219, 4, -2.99219, 2.99219, -4, 2.99219, -4, -4, 4, -4)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(2.99219, -4, 2.99219, -3, 4, -2.99219, 4, 2.99219, 2.99219, 2.99219, 2.99219, 4, -4, 4, -4, -4)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.99219, 4, -2.99219, 3, -4, 2.99219, -4, -2.99219, -2.99219, -2.99219, -2.99219, -4, 4, -4, 4, 4)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 4, -4, -2.99219, -2.99219, -2.99219, -2.99219, -4, 4, -4, 4, 4)

[sub_resource type="TileSet" id="TileSet_e1soj"]
tile_size = Vector2i(8, 8)
occlusion_layer_0/light_mask = 2
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 29
sources/0 = SubResource("TileSetAtlasSource_dalgs")

[sub_resource type="Resource" id="Resource_ml8bm"]
script = ExtResource("4_k4v00")
hat_color = 0
head_color = 0
eye_color = 0
cloak_color = 0
body_color = 0
minimum_movespeed = 0
current_movespeed = 150
max_extra_jumps = 5
current_extra_jumps = 0
health = 0
max_health = 100
gold_health = 0
max_gold_health = 100
health_regen_modifier = 1.0
max_mana_points = 16
max_mystic_points = 16
current_mana_points = 0
current_mystic_points = 0
mana_regen_modifier = 1.0
strength = 0
dexterity = 0
force = 0
technique = 0
magic = 0
light = 0
dark = 0
voyd = 0

[sub_resource type="Resource" id="Resource_hubpf"]
script = ExtResource("6_uoj1s")
left_arm_1 = ExtResource("5_rkq8n")
left_arm_2 = ExtResource("6_jyt0l")
right_arm_1 = ExtResource("6_jyt0l")
right_arm_2 = ExtResource("7_5g3t7")

[sub_resource type="Resource" id="Resource_m02bf"]
script = ExtResource("7_1it80")
inv_row = Array[ExtResource("9_mn2ga")]([null, null, null, null, null, null])

[node name="Main" type="Node2D"]
process_mode = 1
script = ExtResource("1_irr2j")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7500.0
offset_top = -3000.0
offset_right = 7500.0
offset_bottom = 3000.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262932, 0.262932, 0.262932, 1)
metadata/_edit_lock_ = true

[node name="BGTerrain" type="TileMapLayer" parent="."]
modulate = Color(0.699653, 0.699653, 0.699653, 1)
scale = Vector2(5, 5)
tile_set = SubResource("TileSet_e1soj")
collision_enabled = false

[node name="Player" parent="." instance=ExtResource("2_tuiag")]
position = Vector2(35, -65)
stats = SubResource("Resource_ml8bm")
equipment = SubResource("Resource_hubpf")
inventory = SubResource("Resource_m02bf")

[node name="PlayerCam" type="Camera2D" parent="Player"]
position_smoothing_enabled = true

[node name="Spells" type="Node2D" parent="."]

[node name="Particles" type="Node2D" parent="Spells"]

[node name="RealTerrain" type="TileMapLayer" parent="."]
position = Vector2(0, 3.8147e-06)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD9/wAAAAACAAEAAAD6/wEAAAACAAEAAAD4/wIAAAACAAEAAAAEAAAAAAAEAAEAAAAHAAEAAAAEAAEAAAAJAAIAAAAEAAEAAAD7/wEAAAADAAEAAAD8/wEAAAADAAEAAAAFAAEAAAADAAEAAAAGAAEAAAADAAEAAAD+/wAAAAADAAEAAAD//wAAAAADAAEAAAAAAAAAAAADAAEAAAABAAAAAAADAAEAAAACAAAAAAADAAEAAAADAAAAAAADAAEAAAAIAAIAAAADAAEAAAD5/wIAAAADAAEAAAD6/wIAAAACAAIAAAD7/wIAAAADAAIAAAD9/wEAAAACAAIAAAD+/wEAAAADAAIAAAADAAEAAAADAAIAAAAEAAEAAAAEAAIAAAAGAAIAAAADAAIAAAAHAAIAAAAEAAIAAAD+/wIAAAACAAMAAAD//wEAAAADAAIAAAD//wIAAAACAAMAAAD//wMAAAADAAIAAAAAAAIAAAADAAMAAAABAAIAAAAEAAMAAAACAAEAAAADAAIAAAACAAIAAAAEAAMAAAACAAMAAAADAAIAAAADAAIAAAAEAAMAAAABAAEAAAADAAIAAAABAAMAAAADAAIAAAAAAAEAAAADAAIAAAAAAAMAAAADAAIAAAD8/wMAAAADAAMAAAD9/wIAAAADAAIAAAD9/wMAAAAEAAMAAAD9/wQAAAADAAMAAAD+/wMAAAAEAAMAAAD6/wMAAAADAAIAAAD7/wMAAAACAAMAAAD7/wQAAAADAAMAAAD8/wIAAAADAAIAAAD8/wQAAAADAAMAAAD5/wQAAAADAAMAAAD6/wQAAAADAAMAAAD6/wUAAAADAAQAAAD4/wQAAAADAAMAAAD5/wMAAAADAAIAAAD5/wUAAAADAAQAAAD6/wYAAAADAAMAAAD7/wUAAAADAAQAAAD8/wUAAAADAAQAAAD9/wUAAAADAAQAAAD9/wYAAAADAAMAAAD+/wUAAAADAAQAAAD+/wQAAAADAAMAAAD//wQAAAADAAMAAAD//wUAAAADAAQAAAAAAAQAAAADAAMAAAABAAQAAAADAAMAAAABAAUAAAADAAQAAAACAAQAAAADAAMAAAAAAAUAAAADAAQAAAACAAUAAAADAAQAAAADAAQAAAADAAMAAAADAAMAAAACAAMAAAADAAUAAAADAAQAAAAEAAQAAAADAAMAAAAEAAIAAAADAAIAAAAEAAMAAAACAAMAAAAFAAMAAAADAAMAAAAFAAIAAAADAAIAAAAFAAQAAAADAAMAAAAGAAMAAAADAAIAAAAEAAUAAAADAAQAAAAFAAUAAAADAAQAAAAFAAYAAAADAAMAAAAGAAUAAAADAAQAAAAGAAQAAAADAAMAAAAHAAQAAAADAAMAAAAHAAMAAAADAAIAAAAHAAUAAAADAAQAAAAIAAQAAAADAAMAAAAIAAMAAAADAAIAAAAIAAUAAAADAAQAAAAJAAQAAAADAAMAAAAIAAYAAAADAAMAAAAJAAUAAAADAAQAAAAJAAMAAAAEAAIAAAAKAAQAAAADAAMAAAD3/wQAAAADAAMAAAD4/wMAAAACAAIAAAD4/wUAAAADAAQAAAAKAAMAAAADAAEAAAALAAMAAAADAAEAAAAMAAMAAAADAAEAAAANAAMAAAADAAEAAAAOAAMAAAADAAEAAAAPAAMAAAADAAEAAAAQAAMAAAADAAEAAAARAAMAAAADAAEAAAASAAMAAAADAAEAAAATAAMAAAADAAEAAAAUAAMAAAADAAEAAAAVAAMAAAADAAEAAAD3/wMAAAADAAEAAAD2/wMAAAADAAEAAAD1/wMAAAADAAEAAAD0/wMAAAADAAEAAADz/wMAAAADAAEAAADy/wMAAAADAAEAAADx/wMAAAADAAEAAADw/wMAAAADAAEAAADv/wMAAAADAAEAAADu/wMAAAADAAEAAADt/wMAAAADAAEAAAAWAAMAAAADAAEAAAAXAAMAAAADAAEAAADr/wMAAAADAAEAAADs/wMAAAADAAEAAADr/wQAAAADAAMAAADr/wUAAAADAAQAAADs/wQAAAADAAMAAADs/wUAAAADAAQAAADt/wQAAAADAAMAAADt/wUAAAADAAQAAADu/wQAAAADAAMAAADu/wUAAAADAAQAAADv/wQAAAADAAMAAADv/wUAAAADAAQAAADw/wQAAAADAAMAAADw/wUAAAADAAQAAADx/wQAAAADAAMAAADx/wUAAAADAAQAAADy/wQAAAADAAMAAADy/wUAAAADAAQAAADz/wQAAAADAAMAAADz/wUAAAADAAQAAAD0/wQAAAADAAMAAAD0/wUAAAADAAQAAAD1/wQAAAADAAMAAAD1/wUAAAADAAQAAAD2/wQAAAADAAMAAAD2/wUAAAADAAQAAAD3/wUAAAADAAQAAAAKAAUAAAADAAQAAAALAAQAAAADAAMAAAALAAUAAAADAAQAAAAMAAQAAAADAAMAAAAMAAUAAAADAAQAAAANAAQAAAADAAMAAAANAAUAAAADAAQAAAAOAAQAAAADAAMAAAAOAAUAAAADAAQAAAAPAAQAAAADAAMAAAAPAAUAAAADAAQAAAAQAAQAAAADAAMAAAAQAAUAAAADAAQAAAARAAQAAAADAAMAAAARAAUAAAADAAQAAAASAAQAAAADAAMAAAASAAUAAAADAAQAAAATAAQAAAADAAMAAAATAAUAAAADAAQAAAAUAAQAAAADAAMAAAAUAAUAAAADAAQAAAAVAAQAAAADAAMAAAAVAAUAAAADAAQAAAAWAAQAAAADAAMAAAAWAAUAAAADAAQAAAAXAAQAAAADAAMAAAAXAAUAAAADAAQAAAAYAAQAAAADAAMAAAAYAAUAAAADAAQAAAAZAAQAAAADAAMAAAAZAAUAAAADAAQAAADr/wYAAAADAAMAAADr/wcAAAADAAQAAADs/wYAAAADAAMAAADs/wcAAAADAAQAAADt/wYAAAADAAMAAADt/wcAAAADAAQAAADu/wYAAAADAAMAAADu/wcAAAADAAQAAADv/wYAAAADAAMAAADv/wcAAAADAAQAAADw/wYAAAADAAMAAADw/wcAAAADAAQAAADx/wYAAAADAAMAAADx/wcAAAADAAQAAADy/wYAAAADAAMAAADy/wcAAAADAAQAAADz/wYAAAADAAMAAADz/wcAAAADAAQAAAD0/wYAAAADAAMAAAD0/wcAAAADAAQAAAD1/wYAAAADAAMAAAD1/wcAAAADAAQAAAD2/wYAAAADAAMAAAD2/wcAAAADAAQAAAD3/wYAAAADAAMAAAD3/wcAAAADAAQAAAD4/wYAAAADAAMAAAD4/wcAAAADAAQAAAD5/wYAAAADAAMAAAD5/wcAAAADAAQAAAD6/wcAAAADAAQAAAD7/wYAAAADAAMAAAD7/wcAAAADAAQAAAD8/wYAAAADAAMAAAD8/wcAAAADAAQAAAD9/wcAAAADAAQAAAD+/wYAAAADAAMAAAD+/wcAAAADAAQAAAD//wYAAAADAAMAAAD//wcAAAADAAQAAAAAAAYAAAADAAMAAAAAAAcAAAADAAQAAAABAAYAAAADAAMAAAABAAcAAAADAAQAAAACAAYAAAADAAMAAAACAAcAAAADAAQAAAADAAYAAAADAAMAAAADAAcAAAADAAQAAAAEAAYAAAADAAMAAAAEAAcAAAADAAQAAAAFAAcAAAADAAQAAAAGAAYAAAADAAMAAAAGAAcAAAADAAQAAAAHAAYAAAADAAMAAAAHAAcAAAADAAQAAAAIAAcAAAADAAQAAAAJAAYAAAADAAMAAAAJAAcAAAADAAQAAAAKAAYAAAADAAMAAAAKAAcAAAADAAQAAAALAAYAAAADAAMAAAALAAcAAAADAAQAAAAMAAYAAAADAAMAAAAMAAcAAAADAAQAAAANAAYAAAADAAMAAAANAAcAAAADAAQAAAAOAAYAAAADAAMAAAAOAAcAAAADAAQAAAAPAAYAAAADAAMAAAAPAAcAAAADAAQAAAAQAAYAAAADAAMAAAAQAAcAAAADAAQAAAARAAYAAAADAAMAAAARAAcAAAADAAQAAAASAAYAAAADAAMAAAASAAcAAAADAAQAAAATAAYAAAADAAMAAAATAAcAAAADAAQAAAAUAAYAAAADAAMAAAAUAAcAAAADAAQAAAAVAAYAAAADAAMAAAAVAAcAAAADAAQAAAAWAAYAAAADAAMAAAAWAAcAAAADAAQAAAAXAAYAAAADAAMAAAAXAAcAAAADAAQAAAAYAAYAAAADAAMAAAAYAAcAAAADAAQAAAAZAAYAAAADAAMAAAAZAAcAAAADAAQAAADr/wgAAAADAAMAAADr/wkAAAADAAQAAADs/wgAAAADAAMAAADs/wkAAAADAAQAAADt/wgAAAADAAMAAADt/wkAAAADAAQAAADu/wgAAAADAAMAAADu/wkAAAADAAQAAADv/wgAAAADAAMAAADv/wkAAAADAAQAAADw/wgAAAADAAMAAADw/wkAAAADAAQAAADx/wgAAAADAAMAAADx/wkAAAADAAQAAADy/wgAAAADAAMAAADy/wkAAAADAAQAAADz/wgAAAADAAMAAADz/wkAAAADAAQAAAD0/wgAAAADAAMAAAD0/wkAAAADAAQAAAD1/wgAAAADAAMAAAD1/wkAAAADAAQAAAD2/wgAAAADAAMAAAD2/wkAAAADAAQAAAD3/wgAAAADAAMAAAD3/wkAAAADAAQAAAD4/wgAAAADAAMAAAD4/wkAAAADAAQAAAD5/wgAAAADAAMAAAD5/wkAAAADAAQAAAD6/wgAAAADAAMAAAD6/wkAAAADAAQAAAD7/wgAAAADAAMAAAD7/wkAAAADAAQAAAD8/wgAAAADAAMAAAD8/wkAAAADAAQAAAD9/wgAAAADAAMAAAD9/wkAAAADAAQAAAD+/wgAAAADAAMAAAD+/wkAAAADAAQAAAD//wgAAAADAAMAAAD//wkAAAADAAQAAAAAAAgAAAADAAMAAAAAAAkAAAADAAQAAAABAAgAAAADAAMAAAABAAkAAAADAAQAAAACAAgAAAADAAMAAAACAAkAAAADAAQAAAADAAgAAAADAAMAAAADAAkAAAADAAQAAAAEAAgAAAADAAMAAAAEAAkAAAADAAQAAAAFAAgAAAADAAMAAAAFAAkAAAADAAQAAAAGAAgAAAADAAMAAAAGAAkAAAADAAQAAAAHAAgAAAADAAMAAAAHAAkAAAADAAQAAAAIAAgAAAADAAMAAAAIAAkAAAADAAQAAAAJAAgAAAADAAMAAAAJAAkAAAADAAQAAAAKAAgAAAADAAMAAAAKAAkAAAADAAQAAAALAAgAAAADAAMAAAALAAkAAAADAAQAAAAMAAgAAAADAAMAAAAMAAkAAAADAAQAAAANAAgAAAADAAMAAAANAAkAAAADAAQAAAAOAAgAAAADAAMAAAAOAAkAAAADAAQAAAAPAAgAAAADAAMAAAAPAAkAAAADAAQAAAAQAAgAAAADAAMAAAAQAAkAAAADAAQAAAARAAgAAAADAAMAAAARAAkAAAADAAQAAAASAAgAAAADAAMAAAASAAkAAAADAAQAAAATAAgAAAADAAMAAAATAAkAAAADAAQAAAAUAAgAAAADAAMAAAAUAAkAAAADAAQAAAAVAAgAAAADAAMAAAAVAAkAAAADAAQAAAAWAAgAAAADAAMAAAAWAAkAAAADAAQAAAAXAAgAAAADAAMAAAAXAAkAAAADAAQAAAAYAAgAAAADAAMAAAAYAAkAAAADAAQAAAAZAAgAAAADAAMAAAAZAAkAAAADAAQAAADr/woAAAADAAMAAADr/wsAAAADAAQAAADs/woAAAADAAMAAADs/wsAAAADAAQAAADt/woAAAADAAMAAADt/wsAAAADAAQAAADu/woAAAADAAMAAADu/wsAAAADAAQAAADv/woAAAADAAMAAADv/wsAAAADAAQAAADw/woAAAADAAMAAADw/wsAAAADAAQAAADx/woAAAADAAMAAADx/wsAAAADAAQAAADy/woAAAADAAMAAADy/wsAAAADAAQAAADz/woAAAADAAMAAADz/wsAAAADAAQAAAD0/woAAAADAAMAAAD0/wsAAAADAAQAAAD1/woAAAADAAMAAAD1/wsAAAADAAQAAAD2/woAAAADAAMAAAD2/wsAAAADAAQAAAD3/woAAAADAAMAAAD3/wsAAAADAAQAAAD4/woAAAADAAMAAAD4/wsAAAADAAQAAAD5/woAAAADAAMAAAD5/wsAAAADAAQAAAD6/woAAAADAAMAAAD6/wsAAAADAAQAAAD7/woAAAADAAMAAAD7/wsAAAADAAQAAAD8/woAAAADAAMAAAD8/wsAAAADAAQAAAD9/woAAAADAAMAAAD9/wsAAAADAAQAAAD+/woAAAADAAMAAAD+/wsAAAADAAQAAAD//woAAAADAAMAAAD//wsAAAADAAQAAAAAAAoAAAADAAMAAAAAAAsAAAADAAQAAAABAAoAAAADAAMAAAABAAsAAAADAAQAAAACAAoAAAADAAMAAAACAAsAAAADAAQAAAADAAoAAAADAAMAAAADAAsAAAADAAQAAAAEAAoAAAADAAMAAAAEAAsAAAADAAQAAAAFAAoAAAADAAMAAAAFAAsAAAADAAQAAAAGAAoAAAADAAMAAAAGAAsAAAADAAQAAAAHAAoAAAADAAMAAAAHAAsAAAADAAQAAAAIAAoAAAADAAMAAAAIAAsAAAADAAQAAAAJAAoAAAADAAMAAAAJAAsAAAADAAQAAAAKAAoAAAADAAMAAAAKAAsAAAADAAQAAAALAAoAAAADAAMAAAALAAsAAAADAAQAAAAMAAoAAAADAAMAAAAMAAsAAAADAAQAAAANAAoAAAADAAMAAAANAAsAAAADAAQAAAAOAAoAAAADAAMAAAAOAAsAAAADAAQAAAAPAAoAAAADAAMAAAAPAAsAAAADAAQAAAAQAAoAAAADAAMAAAAQAAsAAAADAAQAAAARAAoAAAADAAMAAAARAAsAAAADAAQAAAASAAoAAAADAAMAAAASAAsAAAADAAQAAAATAAoAAAADAAMAAAATAAsAAAADAAQAAAAUAAoAAAADAAMAAAAUAAsAAAADAAQAAAAVAAoAAAADAAMAAAAVAAsAAAADAAQAAAAWAAoAAAADAAMAAAAWAAsAAAADAAQAAAAXAAoAAAADAAMAAAAXAAsAAAADAAQAAAAYAAoAAAADAAMAAAAYAAsAAAADAAQAAAAZAAoAAAADAAMAAAAZAAsAAAADAAQAAAAZAAMAAAADAAEAAAAYAAMAAAADAAEAAAAaAAMAAAADAAEAAAAaAAQAAAADAAIAAAAaAAUAAAADAAMAAAAaAAYAAAADAAQAAAAbAAMAAAADAAEAAAAbAAQAAAADAAIAAAAbAAUAAAADAAMAAAAbAAYAAAADAAQAAAAcAAMAAAADAAEAAAAcAAQAAAADAAIAAAAcAAUAAAADAAMAAAAcAAYAAAADAAQAAAAdAAMAAAADAAEAAAAdAAQAAAADAAIAAAAdAAUAAAADAAMAAAAdAAYAAAADAAQAAAAeAAMAAAADAAEAAAAeAAQAAAADAAIAAAAeAAUAAAADAAMAAAAeAAYAAAADAAQAAAAfAAMAAAADAAEAAAAfAAQAAAADAAIAAAAfAAUAAAADAAMAAAAfAAYAAAADAAQAAAAgAAMAAAADAAEAAAAgAAQAAAADAAIAAAAgAAUAAAADAAMAAAAgAAYAAAADAAQAAAAhAAMAAAADAAEAAAAhAAQAAAADAAIAAAAhAAUAAAADAAMAAAAhAAYAAAADAAQAAAAiAAMAAAADAAEAAAAiAAQAAAADAAIAAAAiAAUAAAADAAMAAAAiAAYAAAADAAQAAAAjAAMAAAADAAEAAAAjAAQAAAADAAIAAAAjAAUAAAADAAMAAAAjAAYAAAADAAQAAAAkAAMAAAADAAEAAAAkAAQAAAADAAIAAAAkAAUAAAADAAMAAAAkAAYAAAADAAQAAAAlAAMAAAADAAEAAAAlAAQAAAADAAIAAAAlAAUAAAADAAMAAAAlAAYAAAADAAQAAAAmAAMAAAADAAEAAAAmAAQAAAADAAIAAAAmAAUAAAADAAMAAAAmAAYAAAADAAQAAAAnAAMAAAADAAEAAAAnAAQAAAADAAIAAAAnAAUAAAADAAMAAAAnAAYAAAADAAQAAAAoAAMAAAADAAEAAAAoAAQAAAADAAIAAAAoAAUAAAADAAMAAAAoAAYAAAADAAQAAAApAAMAAAADAAEAAAApAAQAAAADAAIAAAApAAUAAAADAAMAAAApAAYAAAADAAQAAAAqAAMAAAADAAEAAAAqAAQAAAADAAIAAAAqAAUAAAADAAMAAAAqAAYAAAADAAQAAAArAAMAAAADAAEAAAArAAQAAAADAAIAAAArAAUAAAADAAMAAAArAAYAAAADAAQAAAAaAAcAAAADAAIAAAAaAAgAAAADAAMAAAAaAAkAAAADAAIAAAAbAAcAAAADAAIAAAAbAAgAAAADAAMAAAAbAAkAAAADAAIAAAAcAAcAAAADAAIAAAAcAAgAAAADAAMAAAAcAAkAAAADAAIAAAAdAAcAAAADAAIAAAAdAAgAAAADAAMAAAAdAAkAAAADAAIAAAAeAAcAAAADAAIAAAAeAAgAAAADAAMAAAAeAAkAAAADAAIAAAAfAAcAAAADAAIAAAAfAAgAAAADAAMAAAAfAAkAAAADAAIAAAAgAAcAAAADAAIAAAAgAAgAAAADAAMAAAAgAAkAAAADAAIAAAAhAAcAAAADAAIAAAAhAAgAAAADAAMAAAAhAAkAAAADAAIAAAAiAAcAAAADAAIAAAAiAAgAAAADAAMAAAAiAAkAAAADAAIAAAAjAAcAAAADAAIAAAAjAAgAAAADAAMAAAAjAAkAAAADAAIAAAAkAAcAAAADAAIAAAAkAAgAAAADAAMAAAAkAAkAAAADAAIAAAAlAAcAAAADAAIAAAAlAAgAAAADAAMAAAAlAAkAAAADAAIAAAAmAAcAAAADAAIAAAAmAAgAAAADAAMAAAAmAAkAAAADAAIAAAAnAAcAAAADAAIAAAAnAAgAAAADAAMAAAAnAAkAAAADAAIAAAAoAAcAAAADAAIAAAAoAAgAAAADAAMAAAAoAAkAAAADAAIAAAApAAcAAAADAAIAAAApAAgAAAADAAMAAAApAAkAAAADAAIAAAAqAAcAAAADAAIAAAAqAAgAAAADAAMAAAAqAAkAAAADAAIAAAArAAcAAAADAAIAAAArAAgAAAADAAMAAAArAAkAAAADAAIAAAAaAAoAAAADAAMAAAAaAAsAAAADAAQAAAAbAAoAAAADAAMAAAAbAAsAAAADAAQAAAAcAAoAAAADAAMAAAAcAAsAAAADAAQAAAAdAAoAAAADAAMAAAAdAAsAAAADAAQAAAAeAAoAAAADAAMAAAAeAAsAAAADAAQAAAAfAAoAAAADAAMAAAAfAAsAAAADAAQAAAAgAAoAAAADAAMAAAAgAAsAAAADAAQAAAAhAAoAAAADAAMAAAAhAAsAAAADAAQAAAAiAAoAAAADAAMAAAAiAAsAAAADAAQAAAAjAAoAAAADAAMAAAAjAAsAAAADAAQAAAAkAAoAAAADAAMAAAAkAAsAAAADAAQAAAAlAAoAAAADAAMAAAAlAAsAAAADAAQAAAAmAAoAAAADAAMAAAAmAAsAAAADAAQAAAAnAAoAAAADAAMAAAAnAAsAAAADAAQAAAAoAAoAAAADAAMAAAAoAAsAAAADAAQAAAApAAoAAAADAAMAAAApAAsAAAADAAQAAAAqAAoAAAADAAMAAAAqAAsAAAADAAQAAAArAAoAAAADAAMAAAArAAsAAAADAAQAAAA=")
tile_set = SubResource("TileSet_e1soj")

[node name="FGTerrain" type="TileMapLayer" parent="."]

[node name="Menus" type="CanvasLayer" parent="."]

[node name="HeadsUpDisplay" parent="Menus" instance=ExtResource("5_10l3x")]

[node name="InventoryUI" parent="Menus" instance=ExtResource("11_7q2vv")]
visible = false
player_inventory = SubResource("Resource_m02bf")

[node name="InGameMenu" parent="Menus" instance=ExtResource("4_vvl4y")]
process_mode = 2
visible = false

[connection signal="finished" from="Player" to="Menus/HeadsUpDisplay" method="_on_player_finished"]
[connection signal="switch_l" from="Player" to="Menus/HeadsUpDisplay" method="_on_player_switch_l"]
[connection signal="switch_r" from="Player" to="Menus/HeadsUpDisplay" method="_on_player_switch_r"]
[connection signal="update_health" from="Player" to="Menus/HeadsUpDisplay" method="_on_player_update_health"]
[connection signal="update_mana" from="Player" to="Menus/HeadsUpDisplay" method="_on_player_update_mana"]
[connection signal="outfit_changed" from="Menus/InGameMenu" to="Player" method="_on_outfit_changed"]
